lista pagina Arriendo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Icono-->
     <link rel="icon" href="assets/img/favicon-96x96.png">
     
-    <title>Venta de Motos</title>
+    <title>Venta y Arriendo de Motos</title>
 </head>
 
 <body>
@@ -28,18 +28,18 @@
 
             <ul>
                 <h2>Venta</h2>
-                <li class="items">Triumph<span class="stock">(6)</span></li>
-                <li class="items">Suzuki<span class="stock">(21)</span></li>
-                <li class="items">Yamaha<span class="stock">(18)</span></li>
-                <li class="items">Honda<span class="stock">(15)</span></li>
-                <li class="items">Ducati<span class="stock">(4)</span></li>
-                <li class="items">Kawasaki<span class="stock">(10)</span></li>
+                <li class="items">Triumph<span class="stock">(3)</span></li>
+                <li class="items">Suzuki<span class="stock">(10)</span></li>
+                <li class="items">Yamaha<span class="stock">(4)</span></li>
+                <li class="items">Honda<span class="stock">(2)</span></li>
+                <li class="items">Ducati<span class="stock">(1)</span></li>
+                <li class="items">Kawasaki<span class="stock">(2)</span></li>
                 <h2>Arriendo</h2>
                 <li class="items">Triumph<span class="stock">(3)</span></li>
-                <li class="items">Suzuki<span class="stock">(5)</span></li>
+                <li class="items">Suzuki<span class="stock">(2)</span></li>
                 <li class="items">Yamaha<span class="stock">(2)</span></li>
                 <li class="items">Honda<span class="stock">(1)</span></li>
-                <li class="items">Ducati<span class="stock">(1)</span></li>
+                <li class="items">Ducati<span class="stock">(0)</span></li>
                 <li class="items">Kawasaki<span class="stock">(2)</span></li>
             </ul>
         </nav>
@@ -54,19 +54,19 @@
                         <img class="img" src="assets/img/triumph-daytona-675.jpg" alt="Daytona">
                         <h5 class="modelo">Daytona</h5>
                         <p class="valor">$9.500.000</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./venta.html" class="btn">Comprar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/triumph-street-scrambler-2021.jpg" alt="Scrambler">
                         <h5 class="modelo">Scrambler</h5>
                         <p class="valor">$12.490.000</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./venta.html" class="btn">Comprar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/triumph-street-triple-2106.jpg" alt="Triple">
                         <h5 class="modelo">Street Triple 675</h5>
                         <p class="valor">$10.690.000</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./venta.html" class="btn">Comprar</a>
                     </div>
                 </div>
             </section>
@@ -78,19 +78,25 @@
                         <img class="img" src="assets/img/triumph-tiger-sport-660-2022.jpg" alt="Tiger">
                         <h5 class="modelo">Tiger Sport 660</h5>
                         <p class="valor">$25.000</p>
-                        <a href="#" class="btn">Arrendar</a>
+                        <p class="urbano">Solo uso Urbano</p>
+                        <p class="rural">Uso Urbano y Rural</p>
+                        <a href="./arriendo.html" class="btn">Arrendar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/triumph-trident-2021.jpg" alt="Trident">
                         <h5 class="modelo">Trident</h5>
                         <p class="valor">$15.000</p>
-                        <a href="#" class="btn">Arrendar</a>
+                        <p class="urbano">Solo uso Urbano</p>
+                        <p class="rural">Uso Urbano y Rural</p>
+                        <a href="./arriendo.html" class="btn">Arrendar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/trumph-tiger-1200-2022-rally-explorer.jpg" alt="Tiger">
                         <h5 class="modelo">Tiger 1200</h5>
                         <p class="valor">$35.000</p>
-                        <a href="#" class="btn">Arrendar</a>
+                        <p class="urbano">Solo uso Urbano</p>
+                        <p class="rural">Uso Urbano y Rural</p>
+                        <a href="./arriendo.html" class="btn">Arrendar</a>
                     </div>
                 </div>
             </section>
@@ -100,6 +106,7 @@
             Bernardo5 2024. &copy;Todos los derechos reservados.
         </footer>
     </div>
+
 </body>
 
 </html>
