--- a/venta.html
+++ b/venta.html
@@ -14,6 +14,9 @@
 
     <!--Icono-->
     <link rel="icon" href="assets/img/favicon-96x96.png">
+
+    <!--message-->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
     <title>Venta de Motos</title>
 </head>
@@ -38,8 +41,8 @@
 
                 <div class="grid">
                     <div class="card" id="card1" >
-                        <p class="urbano">Solo uso Urbano</p>
-                        <p class="rural">Uso Urbano y Rural</p>
+                        <!-- <p class="urbano">Solo uso Urbano</p>
+                        <p class="rural">Uso Urbano y Rural</p> -->
                         
                     </div>
                     <div class="card" id="card2">
@@ -63,6 +66,8 @@
     </div>
 
     <script src="./assets/js/venta.js" ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/sweetalert.css">
 </body>
 
 </html>
