--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
                         <img class="img" src="assets/img/triumph-daytona-675.jpg" alt="Daytona">
                         <h5 class="modelo">Daytona</h5>
                         <p class="valor">$9.500.000</p>
-                        <p class="uso">Solo uso Urbano</p>
+                        <p class="uso">Solo uso Pavimento</p>
                         <a href="./venta.html" class="btn">Comprar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/triumph-street-scrambler-2021.jpg" alt="Scrambler">
                         <h5 class="modelo">Scrambler</h5>
                         <p class="valor">$12.490.000</p>
-                        <p class="uso">Solo uso Urbano</p>
+                        <p class="uso">Solo uso Pavimento</p>
                         <a href="./venta.html" class="btn">Comprar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/triumph-street-triple-2106.jpg" alt="Triple">
                         <h5 class="modelo">Street Triple 675</h5>
                         <p class="valor">$10.690.000</p>
-                        <p class="uso">Solo uso Urbano</p>
+                        <p class="uso">Solo uso Pavimento</p>
                         <a href="./venta.html" class="btn">Comprar</a>
                     </div>
                 </div>
@@ -81,21 +81,21 @@
                         <img class="img" src="assets/img/triumph-tiger-sport-660-2022.jpg" alt="Tiger">
                         <h5 class="modelo">Tiger Sport 660</h5>
                         <p class="valor">$25.000</p>
-                        <p class="uso">SUso Urbano y Rural</p>
+                        <p class="uso">Uso Pavimento y Tierra</p>
                         <a href="./arriendo.html" class="btn">Arrendar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/triumph-trident-2021.jpg" alt="Trident">
                         <h5 class="modelo">Trident</h5>
                         <p class="valor">$15.000</p>
-                        <p class="uso">Solo uso Urbano</p>
+                        <p class="uso">Solo uso Pavimento</p>
                         <a href="./arriendo.html" class="btn">Arrendar</a>
                     </div>
                     <div class="card">
                         <img class="img" src="assets/img/trumph-tiger-1200-2022-rally-explorer.jpg" alt="Tiger">
                         <h5 class="modelo">Tiger 1200</h5>
                         <p class="valor">$35.000</p>
-                        <p class="uso">Uso Urbano y Rural</p>
+                        <p class="uso">Uso Pavimento y Tierra</p>
                         <a href="./arriendo.html" class="btn">Arrendar</a>
                     </div>
                 </div>
